Bug 46433 - var-tracking.c doesn't include tm_p.h
Summary: var-tracking.c doesn't include tm_p.h
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: rtl-optimization (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: build
Depends on:
Blocks: enable-werror-always
  Show dependency treegraph
 
Reported: 2010-11-11 13:11 UTC by Jorn Wolfgang Rennecke
Modified: 2010-11-12 13:23 UTC (History)
0 users

See Also:
Host:
Target: xstormy16-elf
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorn Wolfgang Rennecke 2010-11-11 13:11:42 UTC
xstormy-elf --enable-werror-always build fails with:
../../../gcc/gcc/var-tracking.c: In function ‘vt_stack_adjustments’:
../../../gcc/gcc/var-tracking.c:629:3: error: implicit declaration of function ‘xstormy16_interrupt_function_p’ [-Werror=implicit-function-declaration]

var-tracking.c uses target macros, but does not include tm_p.h .
Comment 1 Jorn Wolfgang Rennecke 2010-11-12 13:20:36 UTC
Author: amylaar
Date: Fri Nov 12 13:20:28 2010
New Revision: 166651

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=166651
Log:
        PR rtl-optimization/46433
        * var-tracking.c: Include tm_p.h .

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/var-tracking.c
Comment 2 Jorn Wolfgang Rennecke 2010-11-12 13:23:56 UTC
Patch has been applied to trunk.